fix display collapsing in mobile

--- a/src/components/board.css
+++ b/src/components/board.css
@@ -101,6 +101,7 @@ button.tile:hover {
     font-size: 20px;
     color: #FBB500;
     min-height: 60px;
+    min-width: 150px;
 }
 
 .player-img {
